objects/Blog_Suggestion__c.object
<CustomObject>
    <fields>
        <fullName>AssignedEmail__c</fullName>
        <formula>Assigned__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignedEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <label>Assigned</label>
        <referenceTo>Blog_Author__c</referenceTo>
        <relationshipLabel>Assigned</relationshipLabel>
        <relationshipName>Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blogged__c</fullName>
        <label>Blogged</label>
        <referenceTo>Blog_Entry__c</referenceTo>
        <relationshipLabel>Suggested</relationshipLabel>
        <relationshipName>Suggested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Blog_Event__c</referenceTo>
        <relationshipLabel>Related</relationshipLabel>
        <relationshipName>Related</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Link__c</fullName>
        <formula>Event__r.Registration_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code_Link__c</fullName>
        <label>Source Code Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SuggestedBy__c</fullName>
        <label>SuggestedBy</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Blog Suggestion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Topic__c</columns>
        <columns>Assigned__c</columns>
        <columns>SuggestedBy__c</columns>
        <columns>Deadline__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLG-{000}</displayFormat>
        <label>REFID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blog Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>